page color restyle

--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -59,7 +59,7 @@
     padding: 0;
     text-align: left;
 
-    background: #1e1e1e;
+    background: rgba(0, 0, 0, 0.2);
     border-radius: 0;
   }
 
@@ -124,7 +124,7 @@
     display: block;
   }
   .card-art-info {
-    background: rgba(255, 255, 255, 0.05);
+    // background: rgba(255, 255, 255, 0.05);
     border-radius: 0 0 12px 12px;
     padding: 16px;
     width: 100%;
