--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -231,10 +231,10 @@ h1 {
   background: hsla(0, 0%, 100%, 0.3);
 }
 .ant-card {
-  background: #141414;
+  background: rgba(0,0,0,0.2);
 }
 .ant-card-bordered {
-  border: 1px solid #303030;
+  border: 1px solid transparent;
 }
 
 .ant-card-meta-title {
