--- a/js/packages/web/src/views/home/index.less
+++ b/js/packages/web/src/views/home/index.less
@@ -1,5 +1,7 @@
 header.ant-layout-header.App-Bar {
+  max-width: 1400px;
   width: 100%;
+  margin: auto;
   background: transparent;
   display: flex;
   justify-content: center;
