--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -42,7 +42,7 @@
     text-align: left;
 
     /* gradients/metal */
-    background: #282828;
+    background: rgba(0,0,0,0.2);
     box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.3);
     border-radius: 0px 0px 8px 8px;
   }
