--- a/js/packages/web/src/components/Footer/index.less
+++ b/js/packages/web/src/components/Footer/index.less
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: @bg-color;
+  background-color: rgba(0, 0, 0, 0.2);
   padding-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
