--- a/js/packages/web/src/components/Layout/index.less
+++ b/js/packages/web/src/components/Layout/index.less
@@ -54,7 +54,7 @@ section.ant-layout {
 }
 
 section#main-layout.ant-layout {
-  background-color: @bg-color !important;
+  background: linear-gradient(to bottom, #1D30C5, #154ED5, #411BA8, #A70865, #281FB8) !important;
   min-height: 100vh;
 
   span#static-header-gradient {
@@ -81,7 +81,7 @@ section#main-layout.ant-layout {
     width: 100%;
     left: 0;
     top: 510px;
-    background: linear-gradient(180deg, rgba(18, 18, 18, 0) 0%, @black-100 100%);
+    // background: linear-gradient(180deg, rgba(18, 18, 18, 0) 0%, @black-100 100%);
     display: none;
   }
 
@@ -91,7 +91,6 @@ section#main-layout.ant-layout {
     top: 0;
     right: 0;
     left: 0;
-    height: 708px;
     background: linear-gradient(180deg, rgba(18, 18, 18, 0) 0%, @black-100 100%);;
     background-position: top left !important;
     background-size: cover !important;
