--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -63,7 +63,7 @@
   }
 
   p {
-    color: #6d6d6d;
+    color: white;
     font-style: normal;
     font-size: 20px;
   }
@@ -103,7 +103,7 @@
 }
 
 .input {
-  background: #282828;
+  background: #353434;
   border-radius: 8px;
   padding: 10px;
   border-width: 0px;
@@ -117,7 +117,7 @@
   height: 80px;
   width: 450px;
   border-radius: 8px;
-  background-color: #1d1d1d;
+  background-color: #403f49 !important;
   border-width: 0px;
   margin-bottom: 20px;
   text-align: left;
@@ -128,7 +128,7 @@
   align-items: center;
   padding: 20px 24px;
 
-  background: linear-gradient(270deg, #616774 7.29%, #403f4c 100%);
+  background: #403f49;
   border-radius: 8px;
   max-width: 100%;
   white-space: normal;
@@ -364,7 +364,7 @@ h2 {
 }
 
 .ant-slider-step {
-  background: linear-gradient(270deg, #616774 7.29%, #403f4c 100%);
+  background: #3a3e47;
   border-radius: 4px;
   height: 10px;
 }
