--- a/js/packages/web/src/components/Banner/index.less
+++ b/js/packages/web/src/components/Banner/index.less
@@ -22,7 +22,7 @@
 #current-banner {
   width: 100%;
   height: 520px;
-  background-color: @black-100;
+  background-color: #0b6ee7;
   background-position: top right;
   background-size: 924px 100%;
   background-repeat: no-repeat;
@@ -33,6 +33,7 @@
     display: none;
   }
   #gradient-banner {
+    display: none;
     position: absolute;
     height: 100%;
     width: 462px;
