--- a/js/packages/web/src/components/Banner/index.less
+++ b/js/packages/web/src/components/Banner/index.less
@@ -45,6 +45,8 @@
   #banner-inner {
     position: absolute;
     top: 0;
+    background: rgba(0,0,0,0.1);
+    border-radius: 12px;
     left: 0;
     bottom: 0;
     right: 0;
@@ -52,7 +54,7 @@
       margin-top: -5%;
       text-align: right;
       span{
-        background: rgba(255, 255, 255, 0.02);
+        background: rgba(255, 255, 255, 0.15);
         border-radius: 36px;
         padding: 15px;
         margin-right: 5px;
