Update footer rights year + add horizontal padding

--- a/js/packages/web/src/components/Footer/index.less
+++ b/js/packages/web/src/components/Footer/index.less
@@ -1,4 +1,10 @@
 
+.inner-footer-container {
+  width: 100%;
+  max-width: 1350px;
+  margin: auto;
+}
+
 .footer-container {
   display: flex;
   flex-direction: column;
