--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -9,8 +9,8 @@
 .auction-image {
   width: 100%;
   aspect-ratio: 1/1;
-  height: 0;
-  padding-bottom: 100%;
+  height: 100%;
+  // padding-bottom: 100%;
   overflow: hidden;
   border-radius: 12px;
   @media (max-width: 1100px) {
