disable gradient-banner and center powered-by text

--- a/js/packages/web/src/components/Banner/index.less
+++ b/js/packages/web/src/components/Banner/index.less
@@ -51,7 +51,8 @@
     bottom: 0;
     right: 0;
     .powered-by{
-      margin-top: -5%;
+      margin-top: -50px;
+      margin-right: 20px;
       text-align: right;
       span{
         background: rgba(255, 255, 255, 0.15);
