--- a/js/packages/web/src/views/home/index.less
+++ b/js/packages/web/src/views/home/index.less
@@ -1,6 +1,7 @@
 header.ant-layout-header.App-Bar {
   max-width: 1400px;
   width: 100%;
+  padding: 30px 48px;
   margin: auto;
   background: transparent;
   display: flex;
@@ -29,6 +30,27 @@ a:hover {
 }
 a:active {
   color: #b480eb;
+}
+
+.masonry-div {
+  overflow: hidden;
+}
+.masonry-div-content {
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  color: white;
+  font-family: 'GraphikWeb';
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
 .masonry-grid {
