display selected network next to top options

--- a/js/packages/web/src/components/Layout/index.less
+++ b/js/packages/web/src/components/Layout/index.less
@@ -21,6 +21,18 @@
   flex-direction: row;
 }
 
+.selected-network {
+  height: 32px;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0 0.6rem;
+  border: 1px white solid;
+  border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 #mobile-navbar {
   display: flex;
   width: 100%;
