--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -10,6 +10,13 @@
     padding: 0 12px !important;
   }
 }
+
+.items-content {
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: hidden !important;
+}
+
 .section {
   padding: 1px;
 }
