update edition badge background

--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -18,7 +18,7 @@
 }
 
 .edition-badge {
-  background: #3E3E3E;
+  background: #3d29a0;
   border-radius: 8px;
   margin: 24px 0px 24px 20px;
   color: #FFFFFF;
