--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -35,7 +35,7 @@
 }
 
 .edition-badge {
-  background: #3e3e3e;
+  background: #3d29a0;
   border-radius: 8px;
   margin: 24px 0px 24px 20px;
   color: #ffffff;
