Enable TieredAuction, add extra info on ReviewStep

--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -21,6 +21,10 @@
   padding: 1px;
 }
 
+.right-section {
+  padding-left: 2rem;
+}
+
 .action-btn:disabled {
   color: rgba(255, 255, 255, 0.5);
   &:hover, &:focus {
@@ -280,7 +284,7 @@ h2 {
   .field-info {
     text-align: left;
 
-    color: rgba(255, 255, 255, 0.5);
+    color: white;
     margin-bottom: 12px;
   }
 
@@ -393,7 +397,7 @@ h2 {
 }
 
 .radio-subtitle {
-  color: dimgray;
+  color: white;
   font-size: 0.8rem;
   margin-bottom: 10px;
 }
