--- a/js/packages/web/src/components/Modals/index.less
+++ b/js/packages/web/src/components/Modals/index.less
@@ -1,10 +1,6 @@
-.ant-modal {
-  width: 500px !important;
-}
-
 .ant-modal-body {
   border-radius: 12px;
-  width: 500px;
+  // width: 500px;
   background: @grey-70 !important;
 }
 
