Fix FluidChains/metaplex changes

--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -41,7 +41,7 @@
     height: 100%;
 
     /* gradients/metal */
-    background: #282828;
+    background: rgba(0,0,0,0.2);
     box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.3);
     border-radius: 0px 0px 8px 8px;
   }
@@ -55,7 +55,7 @@
     border-radius: 25px;
     margin: 0;
     color: @grey-20;
-    background-color: transparent;
+    background: #3d29a0;
   }
 
   .ant-card-meta-title {
@@ -75,6 +75,7 @@
   }
 
   .ant-image {
+    width: 100%;
     display: block;
   }
 
