--- a/js/packages/web/src/components/AuctionCard/index.less
+++ b/js/packages/web/src/components/AuctionCard/index.less
@@ -88,12 +88,12 @@
 }
 
 .ant-modal-content {
-  background-color: #212121;
+  background-color: #1d2b5e;
 }
 
 .ant-modal-footer {
   border-radius: 0 0 12px 12px;
-  background: #212121;
+  background: #1d2b5e;
   border: none;
 
   .ant-btn:not(.ant-btn-primary){
