--- a/js/packages/web/src/components/Footer/index.less
+++ b/js/packages/web/src/components/Footer/index.less
@@ -1,9 +1,15 @@
 
+.inner-footer-container {
+  width: 100%;
+  max-width: 1350px;
+  margin: auto;
+}
+
 .footer-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: @bg-color;
+  background-color: rgba(0, 0, 0, 0.2);
   padding-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
