--- a/js/packages/web/src/components/Modals/index.less
+++ b/js/packages/web/src/components/Modals/index.less
@@ -1,11 +1,11 @@
-.ant-modal {
-  width: 500px !important;
-}
+// .ant-modal:not(.big-modal){
+//   width: 500px !important;
+// }
 
 .ant-modal-body {
   border-radius: 12px;
-  width: 500px;
-  background: @grey-70 !important;
+  // width: 500px;
+  background: #1d2b5e !important;
 }
 
 .congratulations-root {
