--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -173,6 +173,12 @@ h6.info-title {
 .ant-carousel .slick-list .slick-slide.slick-active {
   max-width: 500px;
 }
+
+.slick-active > * .ant-image, .slick-slide > * .ant-image {
+  transform: translate(0px, 0px) !important;
+  position: initial !important;
+}
+
 .artwork-image-lg {
   display: flex;
   // width: 70%;
