--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -9,10 +9,14 @@
 .auction-image {
   width: 100%;
   aspect-ratio: 1/1;
-  height: 0;
-  padding-bottom: 100%;
+  height: 100%;
+  // padding-bottom: 100%;
   overflow: hidden;
   border-radius: 12px;
+  & > video {
+    max-width: 100%;
+    height: auto;
+  }
   @media (max-width: 1100px) {
     margin-left: 0;
   }
@@ -35,7 +39,7 @@
 }
 
 .edition-badge {
-  background: #3e3e3e;
+  background: #3d29a0;
   border-radius: 8px;
   margin: 24px 0px 24px 20px;
   color: #ffffff;
@@ -61,7 +65,7 @@
     padding: 0;
     text-align: left;
 
-    background: #1e1e1e;
+    background: rgba(0, 0, 0, 0.2);
     border-radius: 0;
   }
 
@@ -129,7 +133,7 @@
   }
 
   .card-art-info {
-    background: @grey-100;
+    // background: @grey-100;
     border-radius: 0 0 12px 12px;
     width: 100%;
     height: 100%;
