--- a/js/packages/web/src/components/Banner/index.less
+++ b/js/packages/web/src/components/Banner/index.less
@@ -23,7 +23,7 @@
 #current-banner {
   width: 100%;
   height: 520px;
-  background-color: @black-100;
+  background-color: #0b6ee7;
   background-position: top right;
   background-size: 924px 100%;
   background-repeat: no-repeat;
@@ -34,6 +34,7 @@
     display: none;
   }
   #gradient-banner {
+    display: none;
     position: absolute;
     height: 100%;
     width: 462px;
@@ -45,14 +46,17 @@
   #banner-inner {
     position: absolute;
     top: 0;
+    background: rgba(0,0,0,0.1);
+    border-radius: 12px;
     left: 0;
     bottom: 0;
     right: 0;
     .powered-by{
-      margin-top: -5%;
+      margin-top: -50px;
+      margin-right: 20px;
       text-align: right;
       span{
-        background: rgba(255, 255, 255, 0.02);
+        background: rgba(255, 255, 255, 0.15);
         border-radius: 36px;
         padding: 15px;
         margin-right: 5px;
