--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -80,6 +80,9 @@ code {
 
 .ant-image-img {
   border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .ant-card-cover {
@@ -229,10 +232,10 @@ h1 {
   background: hsla(0, 0%, 100%, 0.3);
 }
 .ant-card {
-  background: #141414;
+  background: rgba(0,0,0,0.2);
 }
 .ant-card-bordered {
-  border: 1px solid #303030;
+  border: 1px solid transparent;
 }
 
 .ant-card-meta-title {
