--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -10,6 +10,10 @@
   align-items: center;
 }
 
+.artwork-image > img {
+  object-fit: contain;
+}
+
 .artist-image {
   width: 35px;
   border-radius: 50%;
