fix video size on ArtCards

--- a/js/packages/web/src/components/InstructionsModal/index.less
+++ b/js/packages/web/src/components/InstructionsModal/index.less
@@ -108,7 +108,7 @@
   }
 
   .ant-modal-content {
-    background: #1f1f1f;
+    background: #1d2b5e;
     border-radius: 12px;
   }
 
@@ -117,7 +117,7 @@
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     padding: 28px 24px 28px 24px;
-    background-color: transparent !important;
+    background-color: #1d2b5e !important;
     color: white !important;
     .ant-modal-title {
       color: white;
@@ -137,7 +137,7 @@
   }
 
   .ant-modal-body {
-    background: rgba(255, 255, 255, 0.05) !important;
+    background: #23336c !important;
     border-radius: 12px;
     padding: 48px;
     @media (max-width: @screen-sm-min) {
