Add glb view on Creation, add Switch between Cover and model

--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -125,6 +125,13 @@
   }
 }
 
+.switch-options {
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+  font-weight: bold;
+}
+
 .input {
   background: rgba(0, 0, 0, 0.45) !important;
   border-radius: 8px;
